# accuracyAssessmentTools

./: .gitignore  AccuracyAssessmentTools.ipynb  README.md  increasing_sample_size.ipynb  naive_acc_assessment.py  olofsson_acc_assessment.py  pyproject.toml  requirements.txt  setup.cfg  stehman2014_table2.csv  stehman_acc_assessment.py  utils.py
accuracyAssessmentTools/: naive_acc_assessment.py  olofsson_acc_assessment.py  stehman_acc_assessment.py
src/acc_assessment/: cardille.py  congalton.py  olofsson.py  stehman.py  utils.py
tests/: cardille_table.csv  map_data_table.csv  ref_data_table.csv  test_cardille.py  test_congalton.py  test_olofsson.py  test_olofsson_against_stehman.py  test_stehman.py  test_stehman_against_olofsson.py  test_utils.py  utils.py
